增加助通通道